[package]
name = "eki"
version = "0.2.0"
authors = ["anthonyoneill <ajoneill@protonmail.com>"]
edition = "2021"
description = "Eki is a solver for steady and transient flow in fluid networks."
license = "GPL-2.0-or-later WITH Bison-exception-2.2"
repository = "https://github.com/anthonyoneill/eki"
readme = "README.md"
documentation = "https://docs.rs/eki"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ohsl = "0.7.5"